<resources>
    <string name="app_name">LeanCloudLibrary</string>

    <!-- Strings related to login -->
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_name">用户名</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_up">注册</string>
    <string name="action_sign_up_short">注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_name">4~20个字符</string>
    <string name="error_invalid_email">邮箱地址不合法</string>
    <string name="error_invalid_password">6~12位字母或数字</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_incorrect_name">用户名已经存在</string>
    <string name="error_incorrect_email">邮箱已经存在</string>

    <string name="error_field_required">必需字段</string>
    <string name="permission_rationale">"为了邮件自动完成，需要联系人权限"
    </string>
    <string name="findpasswd_tip">忘记密码? 重置密码</string>

    <string name="login_tip">没有账号? 新建一个</string>
</resources>
